Fixed line wrap bug with long descriptions. Issue 169

--- a/gwt-cal/src/main/java/com/bradrydzewski/gwt/calendar/theme/google/public/gwt-cal-google.css
+++ b/gwt-cal/src/main/java/com/bradrydzewski/gwt/calendar/theme/google/public/gwt-cal-google.css
@@ -284,7 +284,7 @@
 .gwt-cal .dv-appointment-multiday-selected .body {
 	padding-left: 8px;
 	padding-top: 1px;
-	white-space: wrap;
+	white-space: normal;
 }
 
 .gwt-cal .dv-appointment .footer,
